kubernetes/templates/httproute/internal-gamma/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "${APP}-internal-g"
  namespace: ${NAMESPACE:default}
spec:
  hostnames:
    - "${SUBDOMAIN}.dcunha.io"
  parentRefs:
    - group: ""
      kind: Service
      name: ${APP}
      namespace: ${NAMESPACE:default}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ${APP}
          kind: Service
          namespace: ${NAMESPACE:default}
          port: ${ACCESS_PORT}
